package com.focofitness.appexercicios.util

object TestTags {
    const val CONTENT_TEXT_FIELD = "CONTENT_TEXT_FIELD"
    const val TITLE_TEXT_FIELD = "TITLE_TEXT_FIELD"
    const val BOTAO_SALVAR_ROTINA = "BOTAO_SALVAR_ROTINA"
    const val NOME_EXERCICIO_TEXT_FIELD = "NOME_EXERCICIO_TEXT_FIELD"
    const val TIPO_EXERCICIO_TEXT_FIELD = "TIPO_EXERCICIO_TEXT_FIELD"
    const val SETS_EXERCICIO_TEXT_FIELD = "SETS_EXERCICIO_TEXT_FIELD"
    const val REPS_EXERCICIO_TEXT_FIELD = "REPS_EXERCICIO_TEXT_FIELD"
    const val BOTAO_ADICIONAR_EXERCICIOS = "BOTAO_ADICIONAR_EXERCICIOS"
    const val COLUNA_EXERCICIOS = "COLUNA_EXERCICIOS"
    const val COLUNA_ROTINA= "COLUNA_ROTINA"
    const val ROTINA_DOM = "ROTINA_DOM"
    const val ROTINA_SEG = "ROTINA_SEG"
    const val ROTINA_TER = "ROTINA_TER"
    const val ROTINA_QUA = "ROTINA_QUA"
    const val ROTINA_QUI = "ROTINA_QUI"
    const val ROTINA_SEX = "ROTINA_SEX"
    const val ROTINA_SAB = "ROTINA_SAB"
    const val NOTE_ITEM = "NOTE_ITEM"
}