...
        {
            IconButton(onClick =
                onclickVoltar
            ) {
                Icon(
                    iconeNavegacao ,
                    contentDescription = "botao_voltar",
                )
                if(iconeNavegacao == Icons.Filled.Menu){
                    DropdownMenu(
                        expanded = expanded,
                        onDismissRequest = { expanded = false }
                    ) {
...
            }
        },

        actions = {
            // RowScope here, so these icons will be placed horizontally
            IconButton(onClick = onClickAcao) {
                Icon(iconeEditavel, contentDescription = "botao_direito")
            }
        }
    )
}

@Composable
...
