...
                                    Card(
                                        elevation = 15.dp ,
                                        shape = CircleShape
                                    ) {
                                        Image(
                                            painter = painterResource(id = R.mipmap.ic_exercicios_foreground) ,
                                            contentDescription = "icone_exercicio" ,
                                            contentScale = ContentScale.FillHeight ,
                                            alpha = 1.5f ,
                                            modifier = Modifier
                                                .size(130.dp)
                                                .clickable {
                                                    navController.navigate(Screen.PagExercicios.route)
...
